--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,4 @@
-:root{
-    --maincolor:#F2F2F2;
 
-}
 
 *{
     box-sizing: border-box;
@@ -12,17 +9,18 @@
 body{
     background-color:#ffffff;
     font-family: "Arial", sans-serif;
-    color:#424242;
-    
+    color:#424242;    
 }
 
 .wrapper{
     height: 100vh;
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 0.5fr 4fr 1fr;
+    grid-template-rows: 0.5fr 4fr 0.8fr;
+ 
     
-    
+/*header section  */
+
 }
 
 .header-section{
@@ -31,6 +29,8 @@ body{
     justify-content: flex-end;
     align-items: center;
 }
+
+/* navigation bar */
 
 .header-section .nav-wrap{
     display: flex;
@@ -65,9 +65,9 @@ body{
 }
 
 
+/* main section */
 .main-content{
     grid-row:2;
-    border: 2px solid red;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -89,6 +89,20 @@ body{
     display: grid;
     grid-template-columns: 0.1fr 5fr 0.6fr;
     overflow: hidden;
+}
+
+.search-container:hover{
+    box-shadow: 0px 2px 10px -2px rgba(0,0,0,0.53);
+    -webkit-box-shadow: 0px 2px 10px -2px rgba(0,0,0,0.53);
+    -moz-box-shadow: 0px 2px 10px -2px rgba(0,0,0,0.53);
+border: none;
+}
+
+.search-container:focus-within{
+    box-shadow: 0px 2px 10px -2px rgba(0,0,0,0.53);
+-webkit-box-shadow: 0px 2px 10px -2px rgba(0,0,0,0.53);
+-moz-box-shadow: 0px 2px 10px -2px rgba(0,0,0,0.53);
+border: none;
 }
 
 .search-container .fas{
@@ -126,6 +140,14 @@ body{
     border: none;
     font-size: 0.85rem;
     background-color: #f8f8f8;
+    border-radius: 5px;
+}
+
+.buttons .btn:hover{
+    box-shadow: 0px 2px 2px -2px rgba(0,0,0,0.53);
+-webkit-box-shadow: 0px 2px 2px -2px rgba(0,0,0,0.53);
+-moz-box-shadow: 0px 2px 2px -2px rgba(0,0,0,0.53);
+    border: 1px #cccccc solid;
 }
 
 .buttons .btn:first-child{
@@ -151,11 +173,56 @@ body{
 
 
 
-
+/* footer section */
 
 .page-footer{
     grid-row: 3;
-    border: 2px solid red;
-    padding: 30px;
-
+    display: flex;
+    flex-direction: column;
+    background-color: #f3f3f3;
 }
+
+.page-footer .footer-top{
+    border-bottom: 1px solid #dddddd;
+    padding: 0.8rem 2rem;
+    font-weight: normal;
+}
+
+.page-footer .footer-top p{
+   padding: 0; 
+   color: #888888;
+   font-size: 0.9rem;
+}
+
+.footer-bottom{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 100%;
+    padding: 0 2rem;
+}
+
+.footer-bottom a{
+    text-decoration: none;
+    font-size: 0.85rem;
+    color: #888888;
+    display: inline-block;
+}
+
+.footer-bottom a:hover{
+    text-decoration: underline;
+}
+
+.footer-bottom .sales a, .footer-bottom .legal-container a{
+    margin-right: 1rem;
+}
+
+.footer-bottom .eco-friendly img{
+    display: inline-block;
+    transform: translateY(30%);   
+}
+
+
+
+
+
